got hit and stand to work and can play multiple hands in a row

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -58,6 +58,12 @@ body {
 .marketing p + h4 {
   margin-top: 28px;
 }
+.cards{
+  list-style: none;
+}
+.cards li {
+  display: inline-block;
+}
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
