--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -2,6 +2,10 @@
 body {
   padding-top: 20px;
   padding-bottom: 20px;
+  background-size: 100%;
+  background-image:url('../images/table.jpg');
+  background-repeat:no-repeat;
+  color: white;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
